refactor(log-parse-components): update the components